--- a/src/views/CV.html
+++ b/src/views/CV.html
@@ -7,11 +7,11 @@
 </head>
 <body>
   <h2>CV master</h2>
-  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="http://code.jquery.com/jquery.js" type="text/javascript"></script>
   <!--script src="js/bootstrap.min.js"></script-->
 
   <script>
-
+/*
   fetch('api').then(function(response) {
     if (response.status !== 200) {
       console.log('Looks like there was a problem. Status Code: ' +
@@ -25,11 +25,38 @@
 
   }, function(error) {
     return console.log("Error!")
-  })
-  </script>
+  });
+  */
+</script>
+
+<script>
+$(document).ready(function() {
+  'use strict';
+
+  $.ajax({
+    url:'/api/',
+    type:'get',
+    success:function(data){
+        $("#textfield").val = data;
+    }
+  });
+
+  $( "#cvInput" ).submit(function( event ) {
+    console.log("submitting");
+    $.ajax({
+      url:'/api/',
+      type:'post',
+      data:$('#cvInput').serialize(),
+      success:function(data){
+          alert(data);
+      }
+    });
+  });
+});
+</script>
 
   <!-- Makes an HTML post request when clicking the button-->
-  <form action="api" method="post">
+  <form id="cvInput">
     <textarea type="text" rows="10" cols="50" id="textfield" name="textfield"></textarea>
     <div class="form-actions">
       <button type="submit" class="btn btn-primary">Save</button>
