--- a/src/views/CV.html
+++ b/src/views/CV.html
@@ -12,7 +12,7 @@
 
   <script>
 
-  fetch('api/get').then(function(response) {
+  fetch('api').then(function(response) {
     if (response.status !== 200) {
       console.log('Looks like there was a problem. Status Code: ' +
       response.status);
@@ -29,7 +29,7 @@
   </script>
 
   <!-- Makes an HTML post request when clicking the button-->
-  <form action="api/post" method="post">
+  <form action="api" method="post">
     <textarea type="text" rows="10" cols="50" id="textfield" name="textfield"></textarea>
     <div class="form-actions">
       <button type="submit" class="btn btn-primary">Save</button>
