--- a/src/views/CV.ejs
+++ b/src/views/CV.ejs
@@ -7,48 +7,20 @@
 </head>
 <body>
   <h2>CV master</h2>
-  <script src="http://code.jquery.com/jquery.js" type="text/javascript"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
   <!--script src="js/bootstrap.min.js"></script-->
-
-  <script>
-/*
-  fetch('api').then(function(response) {
-    if (response.status !== 200) {
-      console.log('Looks like there was a problem. Status Code: ' +
-      response.status);
-      return;
-    }
-    response.text().then(function(data) {
-      document.getElementById("textfield").value = data
-    });
-
-
-  }, function(error) {
-    return console.log("Error!")
-  });
-  */
-</script>
 
 <script>
 $(document).ready(function() {
   'use strict';
-
-  $.ajax({
-    url:'/api/',
-    type:'get',
-    success:function(data){
-        $("#textfield").val = data;
-    }
-  });
-
   $( "#cvInput" ).submit(function( event ) {
     console.log("submitting");
     $.ajax({
-      url:'/api/',
+      url:'/api',
       type:'post',
       data:$('#cvInput').serialize(),
       success:function(data){
-          alert(data);
+        alert(data)
       }
     });
   });
@@ -57,7 +29,7 @@ $(document).ready(function() {
 
   <!-- Makes an HTML post request when clicking the button-->
   <form id="cvInput">
-    <textarea type="text" rows="10" cols="50" id="textfield" name="textfield"></textarea>
+    <textarea type="text" rows="10" cols="50" id="textfield" name="textfield"><%= text %></textarea>
     <div class="form-actions">
       <button type="submit" class="btn btn-primary">Save</button>
     </div>
