Fixed a bug with redirecting

--- a/src/views/CV.ejs
+++ b/src/views/CV.ejs
@@ -14,7 +14,8 @@
 $(document).ready(function() {
   'use strict'
   $( "#cvInput" ).submit(function( event ) {
-    console.log("submitting")
+    event.originalEvent.preventDefault()
+    console.log(event)
     $.ajax({
       url:'/api',
       type:'post',
