--- a/src/views/CV.ejs
+++ b/src/views/CV.ejs
@@ -14,6 +14,7 @@
 $(document).ready(function() {
   'use strict'
   $( "#cvInput" ).submit(function( event ) {
+    event.originalEvent.preventDefault()
     console.log("submitting")
     $.ajax({
       url:'/api',
