--- a/src/views/list.ejs
+++ b/src/views/list.ejs
@@ -13,7 +13,7 @@
 
 
   <% results.forEach(function(r) { %>
-        <a href="\<%=r.id%>"<li><%= r.id %></li>
+        <a href="\<%=r.id%>"><li><%= r.id %></li>
   <% }); %>
 </body>
 </html>
