--- a/src/views/list.ejs
+++ b/src/views/list.ejs
@@ -3,6 +3,7 @@
 <head>
   <title>CV master</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   <!--link href="css/bootstrap.min.css" rel="stylesheet" media="screen"-->
 </head>
 <body>
