--- a/react/src/views/CV.ejs
+++ b/react/src/views/CV.ejs
@@ -6,7 +6,7 @@
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   <!--link href="css/bootstrap.min.css" rel="stylesheet" media="screen"-->
 </head>
-<body>
+<body id="root">
   <h2>CV master</h2>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
   <!--script src="js/bootstrap.min.js"></script-->
