--- a/src/views/CV.ejs
+++ b/src/views/CV.ejs
@@ -8,33 +8,46 @@
 </head>
 <body>
   <h2>CV master</h2>
+  <script src= "lib/markdown.js" type = "text/javascript"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
   <!--script src="js/bootstrap.min.js"></script-->
 
-<script>
-$(document).ready(function() {
-  'use strict'
-  $( "#cvInput" ).submit(function( event ) {
-    event.originalEvent.preventDefault()
-    console.log(event)
-    $.ajax({
-      url:'',
-      type:'post',
-      data:$('#cvInput').serialize(),
-      success: (data) => {
-        alert(data)
+  <script>
+  $(document).ready(function() {
+    'use strict'
+    $( "#cvInput" ).submit(function( event ) {
+      event.originalEvent.preventDefault()
+      console.log(event)
+      $.ajax({
+        url:'',
+        type:'post',
+        data:$('#cvInput').serialize(),
+        success: (data) => {
+          alert(data)
+        }
+      })
+    })
+
+    $("#preview_button").click(function(){
+      var update = function (input, preview) {
+        var asHTML = markdown.toHTML(input.val())
+        preview.html(asHTML)
       }
+      update($('#textfield'), $('#preview'))
     })
   })
-})
-</script>
+
+  </script>
+
 
   <!-- Makes an HTML post request when clicking the button-->
-  <form id="cvInput">
-    <textarea type="text" rows="10" cols="50" id="textfield" name="textfield"><%= text %></textarea>
+  <form id ="cvInput">
+    <textarea type="text" rows="10" cols="50" id ="textfield" name="textfield" ><%= text %></textarea>
     <div class="form-actions">
       <button type="submit" class="btn btn-primary">Save</button>
+      <button type = "button" id = "preview_button">Preview</button>
     </div>
+    <div id = "preview"></div>
   </form>
 </body>
 </html>
