--- a/react/src/index.css
+++ b/react/src/index.css
@@ -22,12 +22,6 @@
   font-family: 'JungkaLight';
 }
 
-.exportgroup {
-  float: right;
-  font-family: 'JungkaRegular';
-
-}
-
 .button {
   color: #242730;
   font-family: 'JungkaRegular';
@@ -39,19 +33,32 @@
 }
 
 .buttonheader {
-  padding-top: 5px;
+  padding-top: 10px;
   padding-right: 5px;
   padding-left: 5px;
-  padding-bottom: 5px;
+  padding-bottom: 10px;
   float: right;
   width: 100%;
+  font-family: 'JungkaRegular';
+}
+
+#editor-buttonheader {
+  padding-left: 15px;
+}
+
+.exportgroup {
+  float: right;
+  font-family: 'JungkaRegular';
+
 }
 
 .CVpreview {
-  padding-left: 5px;
   float: right;
   width: 50%;
+  height: 80vh;
   max-height: auto;
+  padding-left: 15px;
+  overflow: auto;
 }
 
 /*CSS for the lines in between the containers*/
@@ -61,7 +68,7 @@
   height: 100%;
   left: 50%;
   position: absolute;
-  top: 19%;
+  top: 20%;
 }
 
  #lineContainer {
@@ -71,9 +78,11 @@
   position: absolute;
 
 }
+
 .line {
   position: absolute;
   width:100%;
   height: 100vh;
   background: #d5d7de;
 }
+
