--- a/react/src/index.css
+++ b/react/src/index.css
@@ -63,7 +63,7 @@
 
  #lineContainer {
   width: 1px;
-  height: 100%;
+  height: 100vh;
   left: 25%;
   position: absolute;
 
@@ -71,6 +71,6 @@
 .line {
   position: absolute;
   width:100%;
-  height: 100%;
+  height: 100vh;
   background: #d5d7de;
 }
