--- a/server/pdf/preview.ejs
+++ b/server/pdf/preview.ejs
@@ -4,6 +4,9 @@
   <style> <%- styles %> </style>
 </head>
 <body>
+  <div class="cv">
+    <img src="/pdf/face.png" />
     <%- text %>
+  </div>
 </body>
 </html>
