Worked on styling and made it look pretty
Fixed CSS for preview and PDF

Continued pdf styling. PDF works properly.

--- a/react/src/components/App.css
+++ b/react/src/components/App.css
@@ -1,9 +1,9 @@
 /* @import url("/pdf/style.css"); */
 
 .preview {
-    float: right;
     width: 595px;
     border: 1px solid black;
+    margin: auto
 }
 
 .editor {
