--- a/server/pdf/preview.ejs
+++ b/server/pdf/preview.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div class="cv">
-    <img src="/pdf/face.png" />
+    <img class="face" src="pdf/face.png"/>
     <%- text %>
   </div>
 </body>
