--- a/server/pdf/pdf.css
+++ b/server/pdf/pdf.css
@@ -1,36 +1,40 @@
 @font-face {
 font-family: 'Jungka';
 src: url('fonts/Jungka-Regular.otf') format('opentype');
-font-weight: normal;
-font-style: normal;
 }
 @font-face {
 font-family: 'Jungka-Bold';
 src: url('fonts/Jungka-Bold.otf') format('opentype');
-font-weight: bold;
-font-style: normal;
  }
 @font-face {
 font-family: 'Jungka-Medium';
 src: url('fonts/Jungka-Medium.otf') format('opentype');
-font-weight: medium;
-font-style: normal;
 }
 @font-face {
 font-family: 'Jungka-Light';
 src: url('fonts/Jungka-Light.otf') format('opentype');
-font-weight: lighter;
-font-style: normal;
 }
 
 
 .cv {
   font-family: "Jungka";
   padding-left: 30px;
-  margin-right: 50px;
+  padding-right: 50px;
   padding-bottom: 20px;
   padding-top: 20px;
-  width: 600px;
+  width: 595px;
+}
+
+.face {
+  float: left;
+  width: 160px;
+  padding-top: 80px;
+}
+
+.cv > p {
+  letter-spacing: 0.1px;
+  font-size: 9px;
+  color: rgb(109, 52, 52);
 }
 
 .cv > p > img {
@@ -39,19 +43,12 @@ font-style: normal;
   padding-left: 0px;
 }
 
-.cv > img < p {
-  float: left;
-  width: 460px;
-  height: 0px;
-}
-
 .cv > img[alt="face"] {
   width: 100px;
-  float: none;
+  float: left;
   position: relative;
   top: 00px;
   left: -150px;
-
 }
 
 
@@ -60,10 +57,11 @@ font-style: normal;
 .cv > h3,
 .cv > h4,
 .cv > h5,
-.cv > h6 {
-    width: 390px;
-    padding-left: 200px;
-    margin: 0;
+.cv > h6,
+.cv > p,
+.cv > blockquote  {
+    width: 330px;
+    margin-left: 200px;
     font-family: "Jungka-Light";
 }
 
@@ -81,12 +79,13 @@ font-style: normal;
 .cv > h3 {
   font-size: 10px;
   padding-bottom: 10px;
+  margin-top: 0px;
 }
 .cv > h4 {
-  width: 560px;
+  width: 515px;
   font-size: 15px;
   font-weight: 400;
-  padding-bottom: 0px;
+  margin-left: 0;
   color: #FC6054;
   position: relative;
   top: 40px;
@@ -96,23 +95,14 @@ font-style: normal;
 }
 .cv > h5 {
   margin-top: 80px;
+  margin-bottom: 0px;
   font-size: 20px;
 }
 
 .cv > h6 {
   font-size: 18px;
-  margin-top: 10px;
-}
-
-.cv > p {
-  letter-spacing: 0.1px;
-  font-size: 9px;
-  width: 390px;
-  color: rgb(109, 52, 52);
-  padding: 0px;
-  padding-left: 200px;
-  margin: 0;
-  font-family: "Jungka-Light";
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .cv > p > code {
@@ -131,10 +121,7 @@ font-style: normal;
 .cv > blockquote > p {
   letter-spacing: 0.1px;
   font-size: 9px;
-  width: 380px;
-  float: right;
   color: #666666;
-  padding: 0px;
   margin: 0;
   margin-bottom: 10px;
   font-family: "Jungka";
