Moved fetchPDF() to App and added export functionality for browse view's button as well

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -36,6 +36,7 @@
 .show > .btn-outline-secondary.dropdown-toggle {
   background-color: #242730;
   border-color: #242730;
+  color: #FFFFFF;
 }
 
 .dropdown-menu {
