--- a/server/pdf/pdf.css
+++ b/server/pdf/pdf.css
@@ -16,6 +16,21 @@ src: url('fonts/Jungka-Light.otf') format('opentype');
 }
 
 
+.reaktor {
+  width: 150px;
+  padding-left: 30px;
+  padding-top: 20px;
+}
+
+header > .confidential{
+  float:right;
+  padding-top: 20px;
+  padding-right: 40px;
+  font-family: "Jungka-Light";
+  font-size: 9px;
+  right: 0;
+}
+
 .cv {
   font-family: "Jungka";
   padding-left: 30px;
@@ -28,7 +43,7 @@ src: url('fonts/Jungka-Light.otf') format('opentype');
 .face {
   float: left;
   width: 160px;
-  padding-top: 80px;
+  padding-top: 20px;
 }
 
 .cv > p {
@@ -70,9 +85,10 @@ src: url('fonts/Jungka-Light.otf') format('opentype');
   color: #FC6054;
   letter-spacing: 0.5px;
   margin-top: 20px;
+  padding-top: 5px;
 }
 .cv > h2 {
-  margin-top: 15px;
+  margin-top: 30px;
   font-size: 11px;
   color: #666666;
 }
@@ -82,6 +98,7 @@ src: url('fonts/Jungka-Light.otf') format('opentype');
   margin-top: 0px;
 }
 .cv > h4 {
+  float: left;
   width: 515px;
   font-size: 15px;
   font-weight: 400;
@@ -92,9 +109,10 @@ src: url('fonts/Jungka-Light.otf') format('opentype');
   border-top: 1px solid #DDD;
   padding-top: 10px;
   padding-left: 20px;
+  padding-bottom: 10px;
 }
 .cv > h5 {
-  margin-top: 80px;
+  margin-top: 20px;
   margin-bottom: 0px;
   font-size: 20px;
 }
@@ -114,7 +132,6 @@ src: url('fonts/Jungka-Light.otf') format('opentype');
 }
 
 .cv > blockquote {
-  margin: 0;
   padding: 0;
 }
 
@@ -122,7 +139,25 @@ src: url('fonts/Jungka-Light.otf') format('opentype');
   letter-spacing: 0.1px;
   font-size: 9px;
   color: #666666;
-  margin: 0;
   margin-bottom: 10px;
   font-family: "Jungka";
+}
+
+footer {
+  margin: 0px auto;
+  width: 595px;
+
+  /*FIXME*/
+  padding-left: 90px
+}
+
+ul#footer_list {
+  font-family: "Jungka_Light";
+  font-size: 9px;
+  list-style: none;
+}
+
+ul#footer_list li {
+  display: inline;
+  padding-left: 8px;
 }
