--- a/server/pdf/preview.ejs
+++ b/server/pdf/preview.ejs
@@ -4,9 +4,26 @@
   <style> <%- styles %> </style>
 </head>
 <body>
+  <header>
+    <img class="reaktor" src="pdf/Reaktor_logo.png"/>
+    <div class="confidential">
+      CURRICULUM VITAE
+      <br>
+      confidential
+    </div>
+  </header>
   <div class="cv">
     <img class="face" src="pdf/face.png"/>
     <%- text %>
   </div>
+  <footer>
+    <div class="reaktor_contact">
+      <ul id="footer_list">
+        <li>Reaktor Innovations Oy</li>
+        <li>Mannerheimintie 2, 00100 Helsinki, Finland</li>
+        <li><a href="www.reaktor.com">www.reaktor.com</a></li>
+      </ul>
+    </div>
+  </footer>
 </body>
 </html>
