--- a/server/pdf/pdf.css
+++ b/server/pdf/pdf.css
@@ -78,6 +78,10 @@ header > .confidential{
     width: 330px;
     margin-left: 200px;
     font-family: "Jungka-Light";
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 .cv > h1 {
@@ -85,7 +89,6 @@ header > .confidential{
   color: #FC6054;
   letter-spacing: 0.5px;
   margin-top: 20px;
-  padding-top: 5px;
 }
 .cv > h2 {
   margin-top: 30px;
@@ -94,8 +97,7 @@ header > .confidential{
 }
 .cv > h3 {
   font-size: 10px;
-  padding-bottom: 10px;
-  margin-top: 0px;
+  padding-bottom: 5px;
 }
 .cv > h4 {
   float: left;
@@ -105,7 +107,7 @@ header > .confidential{
   margin-left: 0;
   color: #FC6054;
   position: relative;
-  top: 40px;
+  top: 30px;
   border-top: 1px solid #DDD;
   padding-top: 10px;
   padding-left: 20px;
@@ -152,7 +154,7 @@ footer {
 }
 
 ul#footer_list {
-  font-family: "Jungka_Light";
+  font-family: "Jungka-Light";
   font-size: 9px;
   list-style: none;
 }
