--- a/react/src/components/Browse/Browse.css
+++ b/react/src/components/Browse/Browse.css
@@ -35,6 +35,12 @@
 	border-color: #242730;
 }
 
+.rename-button {
+	padding: 0.3em 0.5em 0em 0.3em;
+	margin-left: 0.5em;
+	font-size: x-small;
+}
+
 .search.form-control {
 	box-shadow: none;
 	color: #242730;
