--- a/react/src/components/Browse/Browse.css
+++ b/react/src/components/Browse/Browse.css
@@ -36,7 +36,7 @@
 }
 
 .rename-button {
-	padding: 0.3em 0.5em 0em 0.3em;
+	padding: 2px 2px 2px 2px;
 	margin-left: 0.5em;
 	font-size: x-small;
 }
