Implement name to cv
Add loadFullName function to db.js, and refactor pdf.js's getHTML and routes.js's post preview to promises, and make them add the user's full name to the CV.

--- a/server/pdf/preview.ejs
+++ b/server/pdf/preview.ejs
@@ -9,6 +9,7 @@
 '/>
   <div class="cv">
     <img class="face" src='https://cdn.rex.reaktor.cloud/people/400x500/<%= userID %>.jpg' />
+    <h5><%- name %></h5>
     <%- text %>
   </div>
 </body>
