--- a/react/src/components/Editor/Editor.css
+++ b/react/src/components/Editor/Editor.css
@@ -7,8 +7,12 @@
 
 .statusMessage {
 	float: right;
-	padding-right: 10px;
-	padding-top: 8px;
+	padding-right: 1vw;
+	padding-top: 1vh;
+}
+
+.editor-buttonheader {
+  padding-left: 0.8vw;
 }
 
 html, body {
