--- a/react/src/components/Header.css
+++ b/react/src/components/Header.css
@@ -4,12 +4,12 @@
 }
 
 .header {
-	padding-bottom: 20px;
-	padding-top: 20px;
-	padding-left: 10px;
-	border-bottom: 1px solid #242730;
+	padding-bottom: 2.8vh;
+	padding-top: 2.8vh;
+	padding-left: 2vh;
+	border-bottom: 0.1vh solid #242730;
 	font-family: 'JungkaBold';
 	color: #FC6054;
-	font-size: 20px;
+	font-size: 3vh;
 	height: 10vh;
 }
