--- a/react/src/index.css
+++ b/react/src/index.css
@@ -43,23 +43,19 @@
 }
 
 .dropdown-menu {
-  border: 1px solid #6c757d;
+  border: 0.1vh solid #6c757d;
 }
 
 .buttonheader {
-  padding-top: 10px;
-  padding-right: 5px;
-  padding-left: 5px;
-  padding-bottom: 10px;
   float: right;
+  padding-top: 2.5vh;
+  padding-right: 0.5vw;
+  padding-left: 0.5vw;
+  padding-bottom: 2.5vh;
   width: 100%;
   font-family: 'JungkaRegular';
-  box-shadow: none;
   height: 10vh;
-}
-
-#editor-buttonheader {
-  padding-left: 15px;
+  box-shadow: none;
 }
 
 .exportgroup {
@@ -73,6 +69,5 @@
   width: 50%;
   height: 80vh;
   max-height: auto;
-  padding-left: 15px;
   overflow: auto;
 }
