Improve pdf/preview styling

--- a/react/src/components/App.css
+++ b/react/src/components/App.css
@@ -1,7 +1,7 @@
 /* @import url("/pdf/style.css"); */
 
 .preview {
-    width: 37em;
+    width: 597px;
     border: 1px solid black;
     margin: auto
 }
