fix the unnecessary footer -bug

--- a/react/src/components/App.css
+++ b/react/src/components/App.css
@@ -3,7 +3,9 @@
 .preview {
     width: 597px;
     border: 1px solid black;
-    margin: auto
+    margin: auto;
+    margin-bottom: 200px;
+    padding-bottom: 40px;
 }
 
 .editor {
