--- a/react/src/components/Browse/Browse.css
+++ b/react/src/components/Browse/Browse.css
@@ -1,14 +1,4 @@
-/*Searchfield in browse-view*/
-.searchfield {
-	float: left;
-	width: calc(100% - 41px);
-	box-shadow: none;
-	color: #242730;
-	border-color: #868e95;
-}
-
-/*Sets the width for searchfield and
-searchicon*/
+/*Sets the width for searchfield and homebutton*/
 .searchfield-and-button {
 	float:left;
 	display: inline;
@@ -16,26 +6,45 @@ searchicon*/
 	min-width: 180px;
 }
 
-/*Searchicon-button after searchfield*/
-#searchbutton {
-	float: right;
+/*Searchfield and clear-button in browse-view*/
+.searchfield {
+	float: left;
+	width: calc(100% - 41px);
+	box-shadow: none;
+	color: #242730;
+}
+
+/*Search-field without button*/
+.form-control {
+	box-shadow: none;
+	border: 1px solid rgb(108, 117, 125);
+}
+
+.form-control:focus {
+	border: 1px solid rgb(108, 117, 125);
+	border-right: none;
+	box-shadow: none;
+}
+
+/*Home-button before searchfield*/
+#homebutton {
+	float: left;
 	width: 40.86px;
 	min-width: 40.86px;
 	box-shadow: none;
 }
 
-/*MyCVs-button next to searchfield*/
-#myCVsButton {
-    margin-left: 0.4%;
-	float: left;
+/*clear-button after searchfield*/
+#clearbutton {
 	box-shadow: none;
+	background-color: white;
+	border-color: rgb(108, 117, 125);
+	border-left-width: 0;
+	color: black;
 }
 
-/*MyCVs-button next to searchfield when active*/
-#myCVsButton.active{
-	background-color: #242730;
-	color: #FFFFFF;
-	border-color: #242730;
+#clearbutton:hover {
+	color: #AAA;
 }
 
 /*Rename-button next to CVs name*/
