--- a/server/pdf/pdf.css
+++ b/server/pdf/pdf.css
@@ -91,21 +91,14 @@ header > .confidential{
 }
 
 .cv > h1 {
-  font-size: 11px;
-  font-family: "Jungka";
-  color: #FC6054;
-  letter-spacing: 0.5px;
+  font-size: 20px;
 }
+
 .cv > h2 {
-  font-size: 11px;
-  font-family: "Jungka";
-  color: #666666;
+  font-size: 18px;
 }
+
 .cv > h3 {
-  font-size: 10px;
-  font-family: "Jungka";
-}
-.cv > h4 {
   float: left;
   width: 180px;
   font-family: "Jungka";
@@ -115,12 +108,20 @@ header > .confidential{
   color: #FC6054;
   top: 30px;
 }
-.cv > h5 {
-  font-size: 20px;
-}
 
+.cv > h4 {
+  font-size: 11px;
+  color: #FC6054;
+  letter-spacing: 0.5px;
+  font-weight: bold;
+}
+.cv > h5 {
+  font-size: 11px;
+  color: #666666;
+  font-weight: bold;
+}
 .cv > h6 {
-  font-size: 18px;
+  font-size: 10px;
 }
 
 .cv > p > code {
