CV language selection (#228)
* Prepare database for 'one CV, one language' functionality

* Fix db.js load and copy for 'one CV, one language' functionality

* Fix db.js save for 'one CV, one language' functionality

* Fix test.js test data for 'one CV, one language' functionality

* Fix db.js initializeTestDB

* Fix db.js loadCVList

* Fix db.js configureUser

* Fix first test in test.js

* Fix second test in test.js

* Fix tests no 3, 4, 5 and 6

* Fix the rest of the tests

* Fix html generation

* Fix pdf generation

* Fix 'preview not updating' bug

* Use different way to tackle the no title problem in editor

* Add language flag to browse

* Add language dropdown to editor

* Load languages from database

* Add language dropdown functionality

* Move language dropdown from right to left

* Fix final test

* Make language dropdown prettier

* Fix CV list according to feedback

* Fix language dropdown according to feedback

* Fix bug regarding copying a CV with secondary language

* Change language flag color and force date on one line

* correct indentation

* Fix language selection

--- a/react/src/components/Browse/Browse.css
+++ b/react/src/components/Browse/Browse.css
@@ -54,6 +54,21 @@
 	font-size: x-small;
 }
 
+.cv-name {
+  margin-bottom: 1em;
+}
+
+.last-modified-datetime {
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.language-flag {
+  margin-left: 0.8em;
+  margin-right: 0.8em;
+  background-color: #616982;
+}
+
 /*Sections where people and their
 CVs are listed*/
 .browse-section {
