--- a/react/src/components/Editor/Editor.css
+++ b/react/src/components/Editor/Editor.css
@@ -19,9 +19,22 @@
   padding-left: 0.8vw;
 }
 
-textarea{
+textarea {
   width: 100%;
   resize: none;
+}
+
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    font-family: inherit;
+    font-size: 1em;
+    padding: 3px;
+    color: #666;
+    width: 100%;
 }
 
 html, body {
