--- a/react/src/components/Browse/Browse.css
+++ b/react/src/components/Browse/Browse.css
@@ -9,6 +9,7 @@
 /*Searchfield and clear-button in browse-view*/
 .searchfield {
 	float: left;
+	padding-left: 0.2em;
 	width: calc(100% - 41px);
 	box-shadow: none;
 	color: #242730;
@@ -50,12 +51,9 @@
 /*Rename-button next to CVs name*/
 .rename-button {
 	padding: 0.2em 0.5em 0.2em 0.5em;
-	margin-left: 0.5em;
+	margin-left: 0.5rem;
+	margin-bottom: 0.3rem;
 	font-size: x-small;
-}
-
-.cv-name {
-  margin-bottom: 1em;
 }
 
 .last-modified-datetime {
