--- a/react/src/components/Browse/Browse.css
+++ b/react/src/components/Browse/Browse.css
@@ -2,7 +2,7 @@
 .searchfield-and-button {
 	float:left;
 	display: inline;
-	width: 24.75%;
+	width: 50%;
 	min-width: 180px;
 }
 
@@ -85,13 +85,18 @@ CVs are listed*/
 	padding-left: 0.5vw;
 	font-family: 'JungkaRegular';
 	overflow: auto;
-	height: 80vh;
+	height: 82vh;
+}
+
+.list-group {
+  width:24.5%;
 }
 
 /*People and their CVs in the lists*/
 .list-group-item {
-    padding-left: 1vw;
-    color: #242730;
+  padding-left: 1vw;
+  color: #242730;
+  width:99%;
 }
 
 /*People and their CVs in the lists, when active*/
