--- a/react/src/index.css
+++ b/react/src/index.css
@@ -84,7 +84,6 @@ Save and Export buttons in editor-view*/
   float: right;
   width: 50%;
   height: 80vh;
-  max-height: auto;
   overflow: auto;
 }
 
@@ -95,4 +94,9 @@ Save and Export buttons in editor-view*/
     margin: auto;
     margin-bottom: 200px;
     padding-bottom: 40px;
+}
+
+#PDFpreview {
+  width: 100%;
+  height: 400px;
 }
