--- a/react/src/components/Browse/Browse.css
+++ b/react/src/components/Browse/Browse.css
@@ -64,14 +64,19 @@
 	font-size: x-small;
 }
 
+.cv-toolbar {
+	margin-right: 1em;
+}
+
 .last-modified-datetime {
+	position: relative;
+	top: 0.15em;
   overflow: hidden;
   white-space: nowrap;
 }
 
 .language-flag {
-  margin-left: 0.8em;
-  margin-right: 0.8em;
+  margin-right: 0.5em;
   background-color: #616982;
 }
 
