--- a/react/src/components/Header.css
+++ b/react/src/components/Header.css
@@ -1,15 +1,15 @@
 @font-face {
-	font-family: 'JungkaBold';
-	src: url('/fonts/Jungka-Bold.otf');
+  font-family: 'JungkaBold';
+  src: url('/fonts/Jungka-Bold.otf');
 }
 
 .header {
-	padding-bottom: 2vh;
-	padding-top: 2vh;
-	padding-left: 1.2vw;
-	border-bottom: 0.1vh solid #242730;
-	font-family: 'JungkaBold';
-	color: #FC6054;
-	font-size: 3vh;
-	height: 8vh;
+  padding-bottom: 2.8vh;
+  padding-top: 2.8vh;
+  padding-left: 2vh;
+  border-bottom: 0.1vh solid #242730;
+  font-family: 'JungkaBold';
+  color: #FC6054;
+  font-size: 3vh;
+  height: 10vh;
 }
