--- a/server/pdf/pdf.css
+++ b/server/pdf/pdf.css
@@ -17,8 +17,9 @@ src: url('/assets/font3.otf') format('opentype');
   padding-top: 20px;
 }
 
-.reaktor {
-  width: 120px;
+.companylogo {
+  max-width: 120px;
+  max-height: 35px;
 }
 
 header > .confidential{
@@ -162,7 +163,7 @@ header > .confidential{
   font-family: "Jungka-Regular";
 }
 
-footer .reaktor_contact {
+footer .footer_contact {
   margin: 0px auto;
   font-family: "Jungka-Light";
   font-size: 0.5em;
