--- a/react/src/components/Editor/Editor.css
+++ b/react/src/components/Editor/Editor.css
@@ -1,3 +1,37 @@
+.template-toggle {
+  float:right;
+  padding-top: 2px;
+}
+/*Copy-button next to template toggle*/
+.copy-button {
+  float: right;
+  margin-right: 2em;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  height: 31px;
+  padding: 0px 0.5em;
+}
+
+/*The message that appears when copy is
+pressed.*/
+.copy-message {
+  float: right;
+  margin-right: 0.5em;
+  padding-top: 2px;
+}
+
+/*Centers the text in Copy button*/
+.copy-button span {
+  vertical-align: middle;
+  display: inline-block;
+}
+
+/*Adds a border around the template when toggled*/
+.template {
+  border: 1px solid RGB(152,152,152);
+  margin:0px;
+}
+
 .language-dropdown {
   margin-left: 0.8em;
 }
@@ -32,15 +66,13 @@ pre {
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
     font-family: inherit;
     font-size: 1em;
-    padding: 3px;
+    padding-left: 2px;
+    padding-top: 2px;
+    padding-bottom: 2px;
     color: #666;
     width: 100%;
 }
 
 html, body {
   overflow: hidden;
-}
-
-.template-toggle {
-  float: right;
 }
